# GetPCLicense

Cxx/: CMakeLists.txt  run.sh
Cxx/exe/: CMakeLists.txt  test.cpp
Cxx/src/: CMakeLists.txt  idmodule.cpp
Python/: CMakeLists.txt  README.md  run.sh  test.py
Python/src/: idmodule.cpp
